--- a/index.html
+++ b/index.html
@@ -3,50 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Usul ad-Deen PWA</title>
+    <title>Usul ad-Deen</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
-    <script src="service-worker.js"></script>
+    <link rel="icon" type="image/png" href="icons/icon-192x192.png">
+    <script defer src="script.js"></script>
 </head>
 <body>
     <header>
-        <h1>Willkommen bei Usul ad-Deen</h1>
+        <h1>Usul ad-Deen</h1>
+        <nav>
+            <ul>
+                <li><a href="#">Start</a></li>
+                <li><a href="#">Bücher</a></li>
+                <li><a href="#">Gebetszeiten</a></li>
+                <li><a href="#">Hadithe</a></li>
+                <li><a href="#">Einstellungen</a></li>
+            </ul>
+        </nav>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#">Startseite</a></li>
-            <li><a href="#buecher">Bücher</a></li>
-            <li><a href="#hadithe">Hadithe</a></li>
-            <li><a href="#gebetszeiten">Gebetszeiten</a></li>
-            <li><a href="#bittgebete">Bittgebete</a></li>
-        </ul>
-    </nav>
+
     <main>
-        <section id="buecher">
-            <h2>Bücher</h2>
-            <p>Hier können Sie islamische Bücher herunterladen und lesen.</p>
-        </section>
-        <section id="hadithe">
-            <h2>Hadithe</h2>
-            <p>Tägliche Hadithe auf Deutsch.</p>
-        </section>
-        <section id="gebetszeiten">
-            <h2>Gebetszeiten</h2>
-            <p>Standortbasierte Gebetszeiten werden hier angezeigt.</p>
-        </section>
-        <section id="bittgebete">
-            <h2>Bittgebete</h2>
-            <p>Tägliche Bittgebete in Arabisch, Deutsch und Transliteration.</p>
+        <section id="content">
+            <h2>Willkommen zur Usul ad-Deen App</h2>
+            <p>Hier findest du islamische Bücher, Hadithe, Gebetszeiten und vieles mehr.</p>
         </section>
     </main>
+
     <footer>
         <p>&copy; 2025 Usul ad-Deen</p>
     </footer>
+
     <script>
         if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('/service-worker.js')
+            navigator.serviceWorker.register('service-worker.js')
                 .then(reg => console.log('Service Worker registriert:', reg))
-                .catch(err => console.log('Service Worker Registrierung fehlgeschlagen:', err));
+                .catch(err => console.error('Service Worker Fehler:', err));
         }
     </script>
 </body>
