--- a/index.html
+++ b/index.html
@@ -6,48 +6,28 @@
     <title>Usul ad-Deen</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="manifest" href="manifest.json">
-    <link rel="icon" type="image/png" href="icons/icon-192x192.png">
-    <script defer src="script.js"></script>
+    <script src="service-worker.js"></script>
 </head>
 <body>
     <header>
-        <h1>Usul ad-Deen</h1>
-        <nav>
-            <ul>
-    <li><a href="#">Beiträge</a></li>
-                <li><a href="#">Bücher</a></li>
-                <li><a href="#">Gebetszeiten</a></li>
-                <li><a href="#">Hadithe</a></li>
-                <li><a href="#">Einstellungen</a></li>
-                <li><a href="#">Login</a></li>
-                <li><a href="#">Über mich</a></li>
-                <li><a href="#">Feedback</a></li>
-            </ul>
-        </nav>
+        <img src="logo.png" alt="Usul ad-Deen Logo" class="logo">
+        <h1>Willkommen bei Usul ad-Deen</h1>
     </header>
 
-    <main>
-        <section id="content">
-        <center>
-            <h2>Willkommen zur Usul ad-Deen App</h2>
-          <p style=“background-color: #B0E0E6;border-bottom-width:2pt; border-bottom-style:solid;”>وعن أبي الدرداء رضي الله عنه قال سمعت رسول الله صلى الله عليه وسلم يقول‏: ‏ ‏ "‏من سلك طريقًا يبتغي فيه علمًا سهل الله له طريقًا إلى الجنة، وإن الملائكة لتضع أجنحتها لطالب العلم رضا بما صنع، وإن العالم ليستغفر له من في السماوات والأرض حتى الحيتان في الماء، وفضل العالم على العابد كفضل القمر على سائر الكواكب، وإن العلماء ورثة الأنبياء وإن الأنبياء لم يورثوا دينارًا ولا درهما وإنما ورثوا العلم‏.‏ فمن أخذه أخذ بحظ وافر‏"‏ ‏(‏‏(‏رواه أبو داود والترمذي‏)‏‏)‏‏.‏</p>
-<p style=“background-color: #B0E0E6;border-bottom-width:2pt; border-bottom-style:solid;”>Abud-Darda (möge Allah mit ihm zufrieden sein) berichtete: Der Gesandte Allahs (ﷺ) sagte: „Wer einem Weg auf der Suche nach Wissen folgt, dem wird Allah den Weg von Jannah leicht machen. Die Engel senken ihre Flügel.“ Der Wissenssucher ist zufrieden mit dem, was er tut. Die Bewohner der Himmel und der Erde und sogar die Fische in den Tiefen der Ozeane bitten um Vergebung für ihn. Die Überlegenheit des Gelehrten über den frommen Anbeter ist wie die des Vollmond zu den übrigen Sternen (d. h. in Helligkeit). Die Gelehrten sind die Erben der Propheten, die weder Dinar noch Dirham hinterlassen, sondern nur das Wissen; und wer es erwirbt, hat tatsächlich einen reichlichen Anteil erworben. [Abu Dawud and At- Tirmidhi].
-Riyad as-Salihin 1388.</p>
-                
-        </center>
-        </section>
-    </main>
+    <section id="gebetszeiten">
+        <h2>Gebetszeiten</h2>
+        <p id="gebetszeiten-info">Lade Gebetszeiten...</p>
+    </section>
+
+    <section id="beschreibung">
+        <h2>Über Usul ad-Deen</h2>
+        <p>Usul ad-Deen ist eine Plattform für islamisches Wissen mit täglich neuen Hadithen, Bittgebeten und mehr.</p>
+    </section>
 
     <footer>
         <p>&copy; 2025 Usul ad-Deen</p>
     </footer>
 
-    <script>
-        if ('serviceWorker' in navigator) {
-            navigator.serviceWorker.register('service-worker.js')
-                .then(reg => console.log('Service Worker registriert:', reg))
-                .catch(err => console.error('Service Worker Fehler:', err));
-        }
-    </script>
+    <script src="script.js"></script>
 </body>
 </html>
