--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="logo.png" alt="Usul ad-Deen Logo" class="logo">
+        <img src="icons/icon-192x192.png" alt="Usul ad-Deen Logo" class="logo">
         <h1>Usul ad-Deen</h1>
     </header>
 
