--- a/index.html
+++ b/index.html
@@ -18,9 +18,11 @@
         <ul>
             <li><a href="index.html">Startseite</a></li>
             <li><a href="buecher.html">Bücher</a></li>
+            <li><a href="buecher.html">Beiträge</a></li>
             <li><a href="gebete.html">Bittgebete</a></li>
             <li><a href="hadithe.html">Hadithe</a></li>
             <li><a href="einstellungen.html">Einstellungen</a></li>
+            <li><a href="buecher.html">Mehr</a></li>
         </ul>
     </nav>
 
@@ -28,22 +30,7 @@
         <h2>Willkommen bei Usul ad-Deen</h2>
         <p>Usul ad-Deen ist eine Plattform für islamisches Wissen. Hier findest du täglich neue Hadithe, Bittgebete und vieles mehr.</p>
     </section>
-
-    <section id="ueber-mich" class="box">
-        <h2>Über mich</h2>
-        <p>
-            "Über mich sei lediglich so viel gesagt:<br>
-            Ich bin niemand, außer ein Diener الله ﷻ, der seinem Herrn dienen möchte, wie es ihm gebührt...
-        </p>
-        <p><strong>Hadith 1:</strong> <br>
-            Abud-Darda (möge Allah mit ihm zufrieden sein) berichtete: Der Gesandte Allahs (ﷺ) sagte: „Wer einem Weg auf der Suche nach Wissen folgt, dem wird Allah den Weg von Jannah leicht machen..."
-        </p>
-        <p><strong>Hadith 2:</strong> <br>
-            Zayd ibn Thabit berichtete: Ich hörte den Gesandten Allahs (ﷺ) sagen: Möge Allah einen Mann erhellen, der eine Tradition von uns hört, sie auswendig lernt und sie an andere weitergibt...
-        </p>
-    </section>
-
-    <section id="gebetszeiten" class="box">
+ <section id="gebetszeiten" class="box">
         <h2>Gebetszeiten</h2>
         <p>Die aktuellen Gebetszeiten für deine Stadt:</p>
         
@@ -71,6 +58,21 @@
         </div>
     </section>
 
+    <section id="ueber-mich" class="box">
+        <h2>Über mich</h2>
+        <p>
+            "Über mich sei lediglich so viel gesagt:<br>
+            Ich bin niemand, außer ein Diener الله ﷻ, der seinem Herrn dienen möchte, wie es ihm gebührt...
+        </p>
+        <p><strong>Hadith 1:</strong> <br>
+            Abud-Darda (möge Allah mit ihm zufrieden sein) berichtete: Der Gesandte Allahs (ﷺ) sagte: „Wer einem Weg auf der Suche nach Wissen folgt, dem wird Allah den Weg von Jannah leicht machen..."
+        </p>
+        <p><strong>Hadith 2:</strong> <br>
+            Zayd ibn Thabit berichtete: Ich hörte den Gesandten Allahs (ﷺ) sagen: Möge Allah einen Mann erhellen, der eine Tradition von uns hört, sie auswendig lernt und sie an andere weitergibt...
+        </p>
+    </section>
+
+   
     <footer>
         <p>© 2025 Usul ad-Deen. Alle Rechte vorbehalten.</p>
     </footer>
