--- a/index.html
+++ b/index.html
@@ -64,12 +64,18 @@
             "Über mich sei lediglich so viel gesagt:<br>
             Ich bin niemand, außer ein Diener الله ﷻ, der seinem Herrn dienen möchte, wie es ihm gebührt...
         </p>
-        <p><strong>Hadith 1:</strong> <br>
-            Abud-Darda (möge Allah mit ihm zufrieden sein) berichtete: Der Gesandte Allahs (ﷺ) sagte: „Wer einem Weg auf der Suche nach Wissen folgt, dem wird Allah den Weg von Jannah leicht machen..."
-        </p>
-        <p><strong>Hadith 2:</strong> <br>
-            Zayd ibn Thabit berichtete: Ich hörte den Gesandten Allahs (ﷺ) sagen: Möge Allah einen Mann erhellen, der eine Tradition von uns hört, sie auswendig lernt und sie an andere weitergibt...
-        </p>
+      
+            ​<div class="hadith-container">
+ <p>وعن أبي الدرداء رضي الله عنه قال سمعت رسول الله صلى الله عليه وسلم يقول‏: ‏ ‏ "‏من سلك طريقًا يبتغي فيه علمًا سهل الله له طريقًا إلى الجنة، وإن الملائكة لتضع أجنحتها لطالب العلم رضا بما صنع، وإن العالم ليستغفر له من في السماوات والأرض حتى الحيتان في الماء، وفضل العالم على العابد كفضل القمر على سائر الكواكب، وإن العلماء ورثة الأنبياء وإن الأنبياء لم يورثوا دينارًا ولا درهما وإنما ورثوا العلم‏.‏ فمن أخذه أخذ بحظ وافر‏"‏ ‏(‏‏(‏رواه أبو داود والترمذي‏)‏‏)‏‏.
+            Abud-Darda (möge Allah mit ihm zufrieden sein) berichtete: Der Gesandte Allahs (ﷺ) sagte: „Wer einem Weg auf der Suche nach Wissen folgt, dem wird Allah den Weg von Jannah leicht machen. Die Engel senken ihre Flügel.“ Der Wissenssucher ist zufrieden mit dem, was er tut. Die Bewohner der Himmel und der Erde und sogar die Fische in den Tiefen der Ozeane bitten um Vergebung für ihn. Die Überlegenheit des Gelehrten über den frommen Anbeter ist wie die des Vollmond zu den übrigen Sternen (d. h. in Helligkeit). Die Gelehrten sind die Erben der Propheten, die weder Dinar noch Dirham hinterlassen, sondern nur das Wissen; und wer es erwirbt, hat tatsächlich einen reichlichen Anteil erworben. [Abu Dawud and At- Tirmidhi].
+            Riyad as-Salihin 1388"   </p>
+            </div>
+    
+<div class="hadith-container">
+            <p>  حَدَّثَنَا مُسَدَّدٌ، حَدَّثَنَا يَحْيَى، عَنْ شُعْبَةَ، حَدَّثَنِي عُمَرُ بْنُ سُلَيْمَانَ، - مِنْ وَلَدِ عُمَرَ بْنِ الْخَطَّابِ - عَنْ عَبْدِ الرَّحْمَنِ بْنِ أَبَانَ، عَنْ أَبِيهِ، عَنْ زَيْدِ بْنِ ثَابِتٍ، قَالَ سَمِعْتُ رَسُولَ اللَّهِ صلى الله عليه وسلم يَقُولُ ‏ "‏ نَضَّرَ اللَّهُ امْرَأً سَمِعَ مِنَّا حَدِيثًا فَحَفِظَهُ حَتَّى يُبَلِّغَهُ فَرُبَّ حَامِلِ فِقْهٍ إِلَى مَنْ هُوَ أَفْقَهُ مِنْهُ وَرُبَّ حَامِلِ فِقْهٍ لَيْسَ بِفَقِيهٍ ‏"‏ ‏.‏
+                Zayd ibn Thabit berichtete: Ich hörte den Gesandten Allahs (ﷺ) sagen: Möge Allah einen Mann erhellen, der eine Tradition von uns hört, sie auswendig lernt und sie an andere weitergibt. Mancher Wissensträger gibt es jemandem weiter, der bewandert ist als er; und mancher Wissensträger kennt sich darin nicht aus.
+                Sunan Abi Dawud 3660, Sahih nach Al-Albani</p>
+​         </div>
     </section>
 
    
