--- a/index.html
+++ b/index.html
@@ -33,12 +33,13 @@
  <section id="gebetszeiten" class="box">
         <h2>Gebetszeiten</h2>
         <p>Die aktuellen Gebetszeiten für deine Stadt:</p> 
-     <div id="user-location">
-        <p>📍 Standort wird ermittelt...</p>
-    </div>
-    <div id="prayer-times">
-        <p>Gebetszeiten werden geladen...</p>
-    </div>
+    <div id="user-location">
+    <p>📍 Standort wird ermittelt...</p>
+</div>
+
+<div id="prayer-times">
+    <p>🕌 Gebetszeiten werden geladen...</p>
+</div>
         <label for="stadt">Oder wähle eine Stadt:</label>
         <select id="stadt">
             <option value="Berlin">Berlin</option>
