--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         </section>
         
         <section id="hadith">
-             ​<div class="hadith-container">
-            <h2>Hadith des Tages</h2>
+             ​<<div id="hadith-container">
+    <h2>📖 Hadith des Tages</h2>
+    <div id="hadith-text"></div>
             <blockquote id="hadith-text">Wird geladen...</blockquote>
              </div>
         </section>
