--- a/index.html
+++ b/index.html
@@ -11,12 +11,26 @@
 <body>
     <header>
         <h1>Usul ad-Deen</h1>
-        <p id="standort-anzeige">Ihr Standort: Wird geladen...</p>
+      <nav id="main-menu">
+    <ul>
+        <li><a href="index.html">Startseite</a></li>
+        <li><a href="Beiträge.html">Beiträge</a></li>
+        <li><a href="gebetszeiten.html">Gebetszeiten</a></li>
+        <li><a href="hadithe.html">Hadithe</a></li>
+        <li><a href="buecher.html">Bücher</a></li>
+        <li><a href="Login.html">Login</a></li>
+        <li><a href="ueber-mich.html">Über mich</a></li>
+        <li><a href="mehr.html">Mehr</a></li>
+    </ul>
+</nav>
+
     </header>
     
     <main>
         <section id="gebetszeiten">
+            
             <h2>Gebetszeiten</h2>
+            <p id="standort-anzeige">Ihr Standort: Wird geladen...</p>
             <p>Fajr: <span id="fajr"></span></p>
             <p>Shuruk: <span id="shuruk"></span></p>
             <p>Dhuhr: <span id="dhuhr"></span></p>
