--- a/index.html
+++ b/index.html
@@ -30,6 +30,27 @@
             <p id="standort">Ihr Standort: Wird ermittelt...</p>
             <p id="stadt"></p>
             <ul id="gebetszeitenListe"></ul>
+            <div>
+    <h2>Gebetszeiten</h2>
+    <p id="currentLocation">Ihr Standort: Wird ermittelt...</p>
+    <p>Fajr: <span id="fajr"></span></p>
+    <p>Shuruk: <span id="shuruk"></span></p>
+    <p>Dhuhr: <span id="dhuhr"></span></p>
+    <p>Asr: <span id="asr"></span></p>
+    <p>Maghrib: <span id="maghrib"></span></p>
+    <p>Isha: <span id="isha"></span></p>
+    <p>Islamische Mitternacht: <span id="mitternacht"></span></p>
+    <p>Letztes Drittel der Nacht: <span id="letztes-drittel"></span></p>
+</div>
+
+<div>
+    <h2>Datum & Uhrzeiten</h2>
+    <p>Islamisches Datum: <span id="islamic-date"></span></p>
+    <p>Gregorianisches Datum: <span id="gregorian-date"></span></p>
+    <p>Uhrzeit Berlin: <span id="zeit-berlin"></span></p>
+    <p>Uhrzeit Mekka: <span id="zeit-mekka"></span></p>
+</div>
+
         </section>
 
         <section class="hadith">
