--- a/index.html
+++ b/index.html
@@ -31,6 +31,34 @@
             <p id="stadt"></p>
             <ul id="gebetszeitenListe"></ul>
             <div>
+                <header>
+    <img src="icons/icon-192x192.png" alt="Usul ad-Deen Logo" id="header-logo">
+    <h1>Usul ad-Deen</h1>
+</header>
+
+<div id="location-container">
+    <p id="currentLocation">Ihr Standort: Wird ermittelt...</p>
+    <select id="manualCitySelection" style="display: none;">
+        <option value="">Stadt manuell auswählen</option>
+        <option value="Berlin">Berlin</option>
+        <option value="Hamburg">Hamburg</option>
+        <option value="München">München</option>
+        <option value="Köln">Köln</option>
+        <option value="Frankfurt">Frankfurt</option>
+        <option value="Stuttgart">Stuttgart</option>
+        <option value="Düsseldorf">Düsseldorf</option>
+        <option value="Dortmund">Dortmund</option>
+        <option value="Essen">Essen</option>
+        <option value="Leipzig">Leipzig</option>
+        <option value="Bremen">Bremen</option>
+        <option value="Dresden">Dresden</option>
+        <option value="Hannover">Hannover</option>
+        <option value="Nürnberg">Nürnberg</option>
+        <option value="Duisburg">Duisburg</option>
+        <option value="Bochum">Bochum</option>
+    </select>
+</div>
+
     <h2>Gebetszeiten</h2>
     <p id="currentLocation">Ihr Standort: Wird ermittelt...</p>
     <p>Fajr: <span id="fajr"></span></p>
