--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <h1>Usul ad-Deen</h1>
-        <img src="icons/icon-192x192.png" alt="Logo" class="logo">
+        <img src="icons/icon-192x192.png" alt="Logo" class="kopfzeilen-logo">
         <nav>
             <ul>
                 <li><a href="index.html">Startseite</a></li>
@@ -41,11 +41,10 @@
                 <li>Letztes Drittel der Nacht: <span id="letztesDrittel"></span></li>
             </ul>
         </div>
-        <div id="stadtAuswahlContainer" style="display:none;">
+ <div id="stadtAuswahlContainer" style="display:none;">
             <h3>Stadt manuell wählen</h3>
             <select id="stadtAuswahl"></select>
         </div>
-
         <div id="hadithDesTages">
             <h2>Hadith des Tages</h2>
             <p id="hadithText"></p>
