--- a/index.html
+++ b/index.html
@@ -8,20 +8,22 @@
     <script defer src="script.js"></script>
 </head>
 <body>
-    <header>
+   <header>
+    <div class="header-container">
         <h1>Usul ad-Deen</h1>
-        <img src="icons/icon-192x192.png" alt="Logo" class="header-logo">
-       
-            <nav>
-            <ul>
-                <li><a href="#">Start</a></li>
-                <li><a href="#">Beiträge</a></li>
-                <li><a href="#">Bücher</a></li>
-                <li><a href="#">Hadithsammlungen</a></li>
-                <li><a href="#">Mehr</a></li>
-            </ul>
-        </nav>
-    </header>
+        <img src="icons/icon-192x192.png" alt="Logo" class="logo">
+    </div>
+    <nav class="menu">
+        <ul>
+            <li><a href="index.html">Startseite</a></li>
+            <li><a href="hadithsammlung.html">Hadithsammlungen</a></li>
+            <li><a href="dua.html">Bittgebete</a></li>
+            <li><a href="beitraege.html">Beiträge</a></li>
+            <li><a href="buecher.html">Bücher</a></li>
+            <li><a href="mehr.html">Mehr</a></li>
+        </ul>
+    </nav>
+</header>
 
     <main>
         <div id="zeitAnzeige">
